--- a/.github/workflows/spellcheck.yml
+++ b/.github/workflows/spellcheck.yml
@@ -18,4 +18,4 @@ jobs:
     - uses: codespell-project/actions-codespell@master
       with:
         path: docs/
-        exclude-file: .github/workflows/exclude-file.txt
+        ignore_words_file: .github/workflows/exclude-file.txt
